<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/account_management"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/app_background3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/app_background_transparent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-40dp" />

    <TextView
        android:id="@+id/accountManagementText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Account"
        android:textSize="50sp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/black"
        android:fontFamily="monospace"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:padding="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/UpdateInformationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="188dp"
        android:fontFamily="monospace"
        android:padding="18dp"
        android:text="Please fill in only the fields that require updates."
        android:textColor="@android:color/black"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/account_management_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/change_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/user_input_fields"
        android:fontFamily="monospace"
        android:hint="New Mobile Number"
        android:inputType="text"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_background3" />

    <EditText
        android:id="@+id/change_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/user_input_fields"
        android:fontFamily="monospace"
        android:hint="New Email"
        android:inputType="textEmailAddress"
        android:padding="18dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_background3" />

    <TextView
        android:id="@+id/UpdateMobileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="476dp"
        android:fontFamily="monospace"
        android:padding="18dp"
        android:text="Update Password Only:"
        android:textColor="@android:color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="544dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/user_input_fields"
        android:fontFamily="monospace"
        android:hint="New Password"
        android:inputType="textPassword"
        android:insetTop="0dp"
        android:padding="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_background3" />

    <EditText
        android:id="@+id/change_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/user_input_fields"
        android:fontFamily="monospace"
        android:hint="Confirm New Password"
        android:inputType="textPassword"
        android:insetTop="0dp"
        android:padding="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_background3" />

    <Button
        android:id="@+id/apply_account_change_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="732dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#625555"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="monospace"
        android:insetTop="0dp"
        android:padding="12dp"
        android:text="Apply Change"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#EADFDF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:backgroundTint="@null"
        app:cornerRadius="@null"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_background3"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/logout_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="988dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#625555"
        android:clickable="true"
        android:fadingEdge="horizontal|vertical"
        android:focusable="true"
        android:fontFamily="monospace"
        android:insetTop="0dp"
        android:padding="12dp"
        android:text="Logout"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#EADFDF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:backgroundTint="@null"
        app:cornerRadius="@null"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_background3" />
</androidx.constraintlayout.widget.ConstraintLayout>