...
        android:inputType="textPassword"
        android:id="@+id/confirm_password"
        />

    <!-- Create Account Button -->
    <Button
        android:id="@+id/create_account_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
...
